--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,34 @@
     justify-content: center;
 }
 
-.card {
+.board {
+    min-width: 300px;
+    min-height: 400px;
+    border: 5px solid lightgray;
+    padding: 20px 10px;
+    border-radius: 12px;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.board__title {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.item {
+    width: 100%;
+    border: 2px solid lightpink;
+    padding: 10px;
+    border-radius: 6px;
+    margin: 5px 0;
+    cursor: grab;
+    background-color: #fcfcf9;
+}
+
+/* .card {
     width: 200px;
     height: 300px;
     border-radius: 12px;
@@ -22,4 +49,4 @@
     align-items: center;
     margin: 20px;
     cursor: grab;
-}
+} */
